fix doc rdnames. minimalist approach

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output:
 
 # dhms
 
-<!-- [![Travis-CI Build Status](https://travis-ci.org/tidyverse/hms.svg?branch=master)](https://travis-ci.org/tidyverse/hms) [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/tidyverse/hms?branch=master&svg=true)](https://ci.appveyor.com/project/tidyverse/hms) [![Coverage Status](https://img.shields.io/codecov/c/github/tidyverse/hms/master.svg)](https://codecov.io/github/tidyverse/hms?branch=master) [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/hms)](https://cran.r-project.org/package=hms) -->
+[![Travis-CI Build Status](https://travis-ci.org/qgeissmann/dhms.svg?branch=master)](https://travis-ci.org/qgeissmann/dhms)<!--[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/tidyverse/hms?branch=master&svg=true)](https://ci.appveyor.com/project/tidyverse/hms) [![Coverage Status](https://img.shields.io/codecov/c/github/tidyverse/hms/master.svg)](https://codecov.io/github/tidyverse/hms?branch=master) [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/hms)](https://cran.r-project.org/package=hms) -->
 
 A simple class for storing durations values and displaying them in the `Dd HH:MM:SS` format. 
 The implementation is exhaustively based on the very neat [hms class](https://github.com/tidyverse/hms).
